# skidjvminterface

./: CMakeLists.txt  README.md
skidjvminterface/: CMakeLists.txt
skidjvminterface/includes/: skidjvminterface.h
skidjvminterface/src/: sjihotspot.c  sjihotspot17.c  sjihotspot21.c  sjijvminterface.c  sjiprocess.c  sjisysmem.c  sjjvminterface.c
tests/: CMakeLists.txt
tests/src/: main.c
